Update and rename RiddlePage.html to index.html

--- a/index.html
+++ b/index.html
@@ -117,11 +117,11 @@ input[type=submit] {
         var altPassword = "Night";
         var password = document.getElementById("pswd").value;
         if (password == confirmPassword) {
-             window.location="/Users/jaredba/Desktop/Murder%20Mystery/Murder%20Mystery.html";
+             window.location="/MurderMystery.html";
         }
 
         else if (altPassword == password) {
-             window.location="/Users/jaredba/Desktop/Murder%20Mystery/Murder%20Mystery.html";
+             window.location="/MurderMystery.html";
         }
 
         else{
