--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@ input[type=submit] {
 <!--Function to check password the already set password is admin-->
 <script type="text/javascript">
     function checkPswd() {
-        var confirmPassword = "night";
-        var altPassword = "Night";
+        var confirmPassword = "darkness";
+        var altPassword = "Darkness";
         var password = document.getElementById("pswd").value;
         if (password == confirmPassword) {
              window.location="/MurderMystery.html";
