--- a/invite.html
+++ b/invite.html
@@ -83,6 +83,13 @@ body{
 
  }
 
+ #clickhere {
+
+ 	color:red;
+ 	font-size: 14pt;
+
+ }
+
 @keyframes typewriter{
   from{width: 0;}
   to{width: 24em;}
@@ -136,6 +143,9 @@ Overnight, President Grump became a national laughingstock. His once avid follow
 <div id="logo">
 
 The Mysterious Case of the President With a Micro-Penis.
+<br> <br>
+
+<span id="clickhere">Click here</span>
 
 </div>
 
