--- a/presidentgrump.html
+++ b/presidentgrump.html
@@ -53,11 +53,12 @@
 <div id="photoContainer"> President Grump
 <br><br>
 
-You are the President of the Communist world. Your power is sometimes limitless, and so is your ego. You have charm, humor, and wit, but sometimes let your own accomplishments get the best of you. After fourteen years, your reputation is in shambles...and you’re scared if you lose the election you will go silently missing one night.
+You are the President of the Communist world. Your power is sometimes limitless, and so is your ego. You have charm, humor, and wit, but sometimes let your own accomplishments get the best of you. After fourteen years, your reputation is in shambles...and you’re scared if you lose the election you will silently go missing one night.
 
-<br><br>
+<br> <br> You are not afraid to lie and keep your deepest, darkest secrets. You're most embarassed by the fact your wife hasn’t slept with you in 5 years.
 
-You are not afraid to lie and keep your deepest, darkest secrets. Your wife hasn’t slept with you in 5 years.
+<br> <br> Your Secret: Out of frustration, you used an internet service, OnlyCelebs, to send naked pics to Michelle Alabama.
+
 
  </div>
 
