--- a/presidentgrump.html
+++ b/presidentgrump.html
@@ -49,7 +49,7 @@
 
 <body>
 
-<div id="descriptionContainer"> <img id="woman" src="unknownimagewoman.png"> </div>
+<div id="descriptionContainer"> <img id="woman" src="manicon.jpg"> </div>
 <div id="photoContainer"> President Grump
 <br><br>
 
