--- a/BonInvite.html
+++ b/BonInvite.html
@@ -114,11 +114,11 @@ input[type=submit] {
         var altPassword = "Smoke";
         var password = document.getElementById("pswd").value;
         if (password == confirmPassword) {
-             window.location="Murder Mystery.html";
+             window.location="MurderMystery4.html";
         }
 
         else if (altPassword == password) {
-             window.location="Murder Mystery.html";
+             window.location="MurderMystery4.html";
         }
 
         else{
