--- a/MaryAnneHighway.html
+++ b/MaryAnneHighway.html
@@ -50,7 +50,7 @@
 <body>
 
 <div id="descriptionContainer"> <img id="woman" src="unknownimagewoman.png"> </div>
-<div id="photoContainer"> President Grump
+<div id="photoContainer"> Mary-Anne Highway
 <br><br>
 
 Noticing the sinking ship of President Grump’s administration, you have made an early exit and have passports ready to flee the country. You’re ready to go, but thought you’d make one last appearance and maybe stir up some trouble.
