--- a/DickBlinton.html
+++ b/DickBlinton.html
@@ -114,11 +114,11 @@ input[type=submit] {
         var altPassword = "michael";
         var password = document.getElementById("pswd").value;
         if (password == confirmPassword) {
-             window.location="Murder Mystery.html";
+             window.location="MurderMysteryDos.html";
         }
 
         else if (altPassword == password) {
-             window.location="Murder Mystery.html";
+             window.location="MurderMysteryDos.html";
         }
 
         else{
