--- a/DickBlintonInvite.html
+++ b/DickBlintonInvite.html
@@ -114,11 +114,11 @@ input[type=submit] {
         var altPassword = "michael";
         var password = document.getElementById("pswd").value;
         if (password == confirmPassword) {
-             window.location="inviteDos.html";
+             window.location="MurdermMysteryDos.html";
         }
 
         else if (altPassword == password) {
-             window.location="inviteDos.html";
+             window.location="MurdermMysteryDos.html";
         }
 
         else{
