--- a/inviteDos.html
+++ b/inviteDos.html
@@ -144,7 +144,7 @@ Overnight, President Grump became a national laughingstock. His once avid follow
 
 The Mysterious Case of the President With a Micro-Penis.
 <br> <br>
-<a href="/DickBlinton">
+<a href="/DickBlintonCharacter">
 <span id="clickhere">Click here</span>
 
 </div>
