--- a/DickBlintonInvite.html
+++ b/DickBlintonInvite.html
@@ -95,10 +95,10 @@ input[type=submit] {
 <form>
     <label for="pswd">
 
-    I stalk babysitters
-    <br> Hunt them with a knife
-    <br>I come out one day a year 
-    <br>You're in for a fright (first name)
+    The person who buys it, does not use it
+    <br> The craftsmen who made it, has no current need for it
+    <br> The person who uses it, does not realize it
+  
 
 
     </label>
@@ -110,8 +110,8 @@ input[type=submit] {
 <!--Function to check password the already set password is admin-->
 <script type="text/javascript">
     function checkPswd() {
-        var confirmPassword = "Michael";
-        var altPassword = "michael";
+        var confirmPassword = "Coffin";
+        var altPassword = "coffin";
         var password = document.getElementById("pswd").value;
         if (password == confirmPassword) {
              window.location="MurderMysteryDos.html";
