Update and rename DickBlintonInvite.html to TiffanyBlintonInvite.html

--- a/TiffanyBlintonInvite.html
+++ b/TiffanyBlintonInvite.html
@@ -95,9 +95,11 @@ input[type=submit] {
 <form>
     <label for="pswd">
 
-    The person who buys it, does not use it
-    <br> The craftsmen who made it, has no current need for it
-    <br> The person who uses it, does not realize it
+        While sheer and unaided force cannot get through,
+        <br><br>I only need gentle turn to do;
+        <br><br>The most important item to not lose
+        <br><br>Or forever out you will be
+        
   
 
 
@@ -110,8 +112,8 @@ input[type=submit] {
 <!--Function to check password the already set password is admin-->
 <script type="text/javascript">
     function checkPswd() {
-        var confirmPassword = "Coffin";
-        var altPassword = "coffin";
+        var confirmPassword = "Key";
+        var altPassword = "key";
         var password = document.getElementById("pswd").value;
         if (password == confirmPassword) {
              window.location="MurderMysteryDos.html";
