--- a/TiffanyBlintonInvite.html
+++ b/TiffanyBlintonInvite.html
@@ -116,11 +116,11 @@ input[type=submit] {
         var altPassword = "key";
         var password = document.getElementById("pswd").value;
         if (password == confirmPassword) {
-             window.location="MurderMysteryDos.html";
+             window.location="MurderMysteryAte.html";
         }
 
         else if (altPassword == password) {
-             window.location="MurderMysteryDos.html";
+             window.location="MurderMysteryAte.html";
         }
 
         else{
