--- a/MurderMysteryAte.html
+++ b/MurderMysteryAte.html
@@ -54,7 +54,7 @@
 <center>
 <div id="animation1">
 
-<a href="/invite">
+<a href="/inviteAte">
 	<img src="yougotmail.jpg"style="height:150px; width:200px; margin-top: 20%" >
 </a>
 
