--- a/inviteAte.html
+++ b/inviteAte.html
@@ -144,7 +144,7 @@ Overnight, President Grump became a national laughingstock. His once avid follow
 
 The Mysterious Case of the President With a Micro-Penis.
 <br> <br>
-<a href="/TiffanyBlinton">
+<a href="/tiffanyblinton">
 <span id="clickhere">Click here</span>
 
 </div>
