--- a/tiffanyblinton.html
+++ b/tiffanyblinton.html
@@ -53,7 +53,7 @@
 <div id="photoContainer"> President Grump
 <br><br>
 
-The heir to Russia apparent, but it’s never been so. You unsuccessfully ran against President Grump 3 times in a row, but never could best him. You’re unconventional and the “cool girl,” but sometimes you come across a little too strong. You certainly know how to win over a man.
+The heir to Russia apparent, but it’s never been so. You unsuccessfully ran against President Grump 3 times in a row, but never could best him. You’re unconventional and the “cool girl,” but sometimes you come across a little too strong. You certainly know how to win over a man, but you haven't slept with your own husband in years.
 
 <br><br>
 
@@ -61,7 +61,7 @@ Your Secret: You’re having an affair with Mitch McDonald, President Grump’s 
 
 <br><br>
 
-You are not afraid to lie and keep your deepest, darkest secrets. Your wife hasn’t slept with you in 5 years.
+
 
  </div>
 
