--- a/tiffanyblinton.html
+++ b/tiffanyblinton.html
@@ -50,10 +50,10 @@
 <body>
 
 <div id="descriptionContainer"> <img id="woman" src="unknownimagewoman.png"> </div>
-<div id="photoContainer"> President Grump
+<div id="photoContainer"> Tiffany Blinton
 <br><br>
 
-The heir to Russia apparent, but it’s never been so. You unsuccessfully ran against President Grump 3 times in a row, but never could best him. You’re unconventional and the “cool girl,” but sometimes you come across a little too strong. You certainly know how to win over a man, but you haven't slept with your own husband in years.
+The heir to Russia apparent, but it’s never been so. You unsuccessfully ran against President Grump 3 times in a row, but never could best him. You’re unconventional and the “cool girl,” but sometimes you come across a little too strong. You certainly know how to win over a man, but you haven't slept with your own husband, Dick Blinton, in years.
 
 <br><br>
 
