--- a/CalamariParisInvite.html
+++ b/CalamariParisInvite.html
@@ -95,10 +95,10 @@ input[type=submit] {
 <form>
     <label for="pswd">
 
-    If you have me
-    <br> you want to share me. 
-    <br>But if you share me, 
-    <br>you haven’t got me.
+  I am made up of two of the same glass bodies,
+  Both joined in one
+  The steadier you keep me,
+  The faster I'll run.
 
 
     </label>
@@ -114,11 +114,11 @@ input[type=submit] {
         var altPassword = "Secret";
         var password = document.getElementById("pswd").value;
         if (password == confirmPassword) {
-             window.location="Murder Mystery.html";
+             window.location="MurderMystery.html";
         }
 
         else if (altPassword == password) {
-             window.location="Murder Mystery.html";
+             window.location="MurderMystery.html";
         }
 
         else{
