--- a/CalamariParisInvite.html
+++ b/CalamariParisInvite.html
@@ -114,11 +114,11 @@ input[type=submit] {
         var altPassword = "Secret";
         var password = document.getElementById("pswd").value;
         if (password == confirmPassword) {
-             window.location="MurderMystery.html";
+             window.location="MurderMysteryFiver.html";
         }
 
         else if (altPassword == password) {
-             window.location="MurderMystery.html";
+             window.location="MurderMysteryFiver.html";
         }
 
         else{
