--- a/CalamariParisInvite.html
+++ b/CalamariParisInvite.html
@@ -110,8 +110,8 @@ input[type=submit] {
 <!--Function to check password the already set password is admin-->
 <script type="text/javascript">
     function checkPswd() {
-        var confirmPassword = "secret";
-        var altPassword = "Secret";
+        var confirmPassword = "hourglass";
+        var altPassword = "Hourglass";
         var password = document.getElementById("pswd").value;
         if (password == confirmPassword) {
              window.location="MurderMysteryFiver.html";
