--- a/CalamariParisInvite.html
+++ b/CalamariParisInvite.html
@@ -96,9 +96,9 @@ input[type=submit] {
     <label for="pswd">
 
   I am made up of two of the same glass bodies,
-  Both joined in one
-  The steadier you keep me,
-  The faster I'll run.
+  <br>Both joined in one
+  <br>The steadier you keep me,
+  <br>The faster I'll run.
 
 
     </label>
