--- a/CalamariParisCharacter.html
+++ b/CalamariParisCharacter.html
@@ -56,9 +56,9 @@
 
 Smiley Jose, President Grumps comeptition, picked you for one reason - you know how to get shit done. You went head to head with Vice President Cents and took him down. Your Twitter game is on fire, literally, as you roast all of the most powerful men in Russia.
 
-You also know you’re on a one track path to being the first woman to lead Russia. Only three people stand in your way - Jose, Grump, and Mandy Pelo’Si.
+<br><br>You also know you’re on a one track path to being the first woman to lead Russia. Only three people stand in your way - Jose, Grump, and Mandy Pelo’Si.
 
-Your Secret: You have a secret plot to become the President of Russia - even if it takes murder.
+<br><br>Your Secret: You have a secret plot to become the President of Russia - even if it takes murder.
 
  </div>
 
