--- a/MichelleAlabamaCharacter.html
+++ b/MichelleAlabamaCharacter.html
@@ -50,7 +50,7 @@
 <body>
 
 <div id="descriptionContainer"> <img id="woman" src="manicon.jpg"> </div>
-<div id="photoContainer"> Calamari Paris
+<div id="photoContainer"> Michelle Alabama
 <br><br>
 
 
