--- a/JoseRiddle.html
+++ b/JoseRiddle.html
@@ -115,11 +115,11 @@ input[type=submit] {
         var altPassword = "Drum";
         var password = document.getElementById("pswd").value;
         if (password == confirmPassword) {
-             window.location="Murder Mystery.html";
+             window.location="MailForChris.html";
         }
 
         else if (altPassword == password) {
-             window.location="Murder Mystery.html";
+             window.location="MailForChris.html";
         }
 
         else{
