Update and rename deadlink.html to MikaelCentsCharacter.html

--- a/MikaelCentsCharacter.html
+++ b/MikaelCentsCharacter.html
@@ -50,15 +50,16 @@
 <body>
 
 <div id="descriptionContainer"> <img id="woman" src="unknownimagewoman.png"> </div>
-<div id="photoContainer"> Tiffany Blinton
+<div id="photoContainer"> Vice President Mikael Cents
 <br><br>
 
-The heir to Russia apparent, but it’s never been so. You unsuccessfully ran against President Grump 3 times in a row, but never could best him. You’re unconventional and the “cool girl,” but sometimes you come across a little too strong. You certainly know how to win over a man, but you haven't slept with your own husband, Dick Blinton, in years.
 
-<br><br>
 
-Your Secret: You’re having an affair with Mitch McDonald, President Grump’s most trusted advisor.
+Calm, collected, sexist...just some of the names people call you. They’re all true. You’re not that great of a person, and you’re pretty useless. But you do know how to stay alive, and you’re not afraid to cut a few necks to do it. Calamari Paris is your biggest enemy. 
 
+<br><br> But you do have your supporters, and word on the street is Smiley Jose wants to keep you around.
+
+Your Secret: You plan to murder Calamari the night of the party.
 <br><br>
 
 
